--- a/app/Pipfile
+++ b/app/Pipfile
@@ -8,8 +8,14 @@ requests = "*"
 requests-mock = "*"
 typer = "*"
 pytest = "*"
+numpy = "==2.0.2"
+pandas = "==2.3.1"
+pyfxgit = "==0.1.1"
+"ruamel.yaml" = "==0.16.12"
+ta = "==0.6.1"
+yfinance = "==0.2.65"
 
 [dev-packages]
 
 [requires]
-python_version = "3.13"
+python_version = "3.9"
