refactor: optimize Makefile with variables and add workbench integration

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,4 +1,11 @@
-.PHONY: default pipenv_freeze pipenv_new pipenv_install pipenv_shell pipenv_venv test test_verbose run run_verbose run_ci install_deps help_app sample demo demo_clean convert_schema chart chart_yfinance chart_help help
+.PHONY: default pipenv_freeze pipenv_new pipenv_install pipenv_shell pipenv_venv test test_verbose run run_verbose run_ci install_deps help_app sample demo demo_clean convert_schema chart chart_yfinance chart_help workbench_discover workbench_analyze workbench_help help
+
+# Variables for repeated commands
+PYTHON_RUN = PYTHONPATH=. pipenv run python
+PYTEST_RUN = PYTHONPATH=. pipenv run pytest
+ENV_CHECK = @source ./make.sh && check_env
+BASE_DEPS = requests pytest requests-mock typer
+CHART_DEPS = numpy==2.0.2 pandas==2.3.1 pyfxgit==0.1.1 ruamel.yaml==0.16.12 ta==0.6.1 yfinance==0.2.65
 
 default: pipenv_shell
 
@@ -17,16 +24,13 @@ pipenv_freeze:
 pipenv_new:
 	pipenv --python 3.13
 
-pipenv_install:
-	pipenv install requests pytest requests-mock typer
-
-# Install CI dependencies (minimal for GitHub Actions)
-install_ci:
-	pipenv install requests pytest requests-mock typer
+# Install base dependencies (CI/minimal setup)
+pipenv_install install_ci:
+	pipenv install $(BASE_DEPS)
 
 # Install development dependencies (including chart analysis packages)
 install_deps:
-	pipenv install requests pytest requests-mock typer numpy==2.0.2 pandas==2.3.1 pyfxgit==0.1.1 ruamel.yaml==0.16.12 ta==0.6.1 yfinance==0.2.65
+	pipenv install $(BASE_DEPS) $(CHART_DEPS)
 
 pipenv_shell:
 	pipenv shell
@@ -35,30 +39,30 @@ pipenv_venv:
 	pipenv --venv
 
 test:
-	@source ./make.sh && check_env
-	PYTHONPATH=. pipenv run pytest tests/
+	$(ENV_CHECK)
+	$(PYTEST_RUN) tests/
 
 test_verbose:
-	@source ./make.sh && check_env
-	PYTHONPATH=. pipenv run pytest tests/ -v -s --log-cli-level INFO --log-cli-format "[%(filename)s:%(lineno)s - def %(funcName)s()] %(levelname)s %(message)s"
+	$(ENV_CHECK)
+	$(PYTEST_RUN) tests/ -v -s --log-cli-level INFO --log-cli-format "[%(filename)s:%(lineno)s - def %(funcName)s()] %(levelname)s %(message)s"
 
 # Run the application with input data
 run:
-	@source ./make.sh && check_env
-	PYTHONPATH=. pipenv run python main.py data/input.csv data/output.csv
+	$(ENV_CHECK)
+	$(PYTHON_RUN) main.py data/input.csv data/output.csv
 
 # Run the application with verbose logging
 run_verbose:
-	@source ./make.sh && check_env
-	PYTHONPATH=. pipenv run python main.py data/input.csv data/output.csv --verbose
+	$(ENV_CHECK)
+	$(PYTHON_RUN) main.py data/input.csv data/output.csv --verbose
 
 # Run the application for CI/GitHub workflows (no environment checks)
 run_ci:
-	PYTHONPATH=. pipenv run python main.py data/input.csv data/output.csv
+	$(PYTHON_RUN) main.py data/input.csv data/output.csv
 
 # Show application help
 help_app:
-	pipenv run python main.py --help
+	$(PYTHON_RUN) main.py --help
 
 # Create input CSV file for testing (current format with TCGPlayer data)
 sample:
@@ -87,71 +91,50 @@ convert_schema:
 	@if [ ! -f data/output.csv ]; then echo "Error: data/output.csv not found"; exit 1; fi
 	@cp data/output.csv data/output_v1_backup.csv
 	@echo "Backup created: data/output_v1_backup.csv"
-	PYTHONPATH=. pipenv run python utils/schema_converter.py data/output.csv data/output_v2_converted.csv --verbose
+	$(PYTHON_RUN) utils/schema_converter.py data/output.csv data/output_v2_converted.csv --verbose
 	@cp data/output_v2_converted.csv data/output.csv
 	@echo "Schema conversion complete: v1.0 → v2.0"
 	@echo "Original v1.0 data backed up to: data/output_v1_backup.csv"
 
 # Technical Analysis Charts
 chart:
-	@source ./make.sh && check_env
-	PYTHONPATH=. pipenv run python chart/index_chart.py data/single_time_series.csv data/sealed_time_series.csv
+	$(ENV_CHECK)
+	$(PYTHON_RUN) chart/index_chart.py data/single_time_series.csv data/sealed_time_series.csv
 
 chart_yfinance:
-	@source ./make.sh && check_env
-	PYTHONPATH=. pipenv run python chart/index_chart.py --yfinance
+	$(ENV_CHECK)
+	$(PYTHON_RUN) chart/index_chart.py --yfinance
 
 chart_help:
-	PYTHONPATH=. pipenv run python chart/index_chart.py --help
+	$(PYTHON_RUN) chart/index_chart.py --help
 
-aggregate_sealed:
-	PYTHONPATH=. pipenv run python chart/index_aggregator.py --name sealed --sets "S*" --types "*Box" --period "3M" --verbose data/output.csv
+# Parametric aggregation commands
+AGGREGATE_ARGS_sealed = --sets "S*" --types "*Box" --period "3M" --verbose
+AGGREGATE_ARGS_single = --sets "S*" --types "Card" --period "3M" --verbose
+AGGREGATE_ARGS_sealed_fb = --sets "S*" --types "*Box" --period "3M" --allow-fallback --verbose
+AGGREGATE_ARGS_single_fb = --sets "S*" --types "Card" --period "3M" --allow-fallback --verbose
 
-aggregate_single:
-	PYTHONPATH=. pipenv run python chart/index_aggregator.py --name single --sets "S*" --types "Card" --period "3M" --verbose data/output.csv
+aggregate_%:
+	$(PYTHON_RUN) chart/index_aggregator.py --name $* $(AGGREGATE_ARGS_$*) data/output.csv
 
-aggregate_sealed_fb:
-	PYTHONPATH=. pipenv run python chart/index_aggregator.py --name sealed_fb --sets "S*" --types "*Box" --period "3M" --allow-fallback --verbose data/output.csv
+# Interactive Alignment Workbench
+workbench_discover:
+	$(PYTHON_RUN) workbench/alignment_workbench.py discover --min-coverage 0.9
 
-aggregate_single_fb:
-	PYTHONPATH=. pipenv run python chart/index_aggregator.py --name single_fb --sets "S*" --types "Card" --period "3M" --allow-fallback --verbose data/output.csv
+workbench_analyze:
+	$(PYTHON_RUN) workbench/alignment_workbench.py analyze --sets "SV*" --types "Card" --period "3M"
+
+workbench_help:
+	$(PYTHON_RUN) workbench/alignment_workbench.py --help
 
 # Show all available targets
 help:
-	@echo "Available Make targets:"
-	@echo ""
-	@echo "Environment Management:"
-	@echo "  pipenv_new      - Create new pipenv environment with Python 3.13"
-	@echo "  install_deps    - Install all required dependencies"
-	@echo "  pipenv_shell    - Activate virtual environment (default target)"
-	@echo "  pipenv_venv     - Show virtual environment path"
-	@echo ""
-	@echo "Application Execution:"
-	@echo "  run             - Run application with sample data"
-	@echo "  run_verbose     - Run application with verbose logging"
-	@echo "  run_ci          - Run application for CI/workflows (no env checks)"
-	@echo "  sample          - Create sample CSV with TCGPlayer data"
-	@echo ""
-	@echo "  help_app        - Show application command-line help"
-	@echo ""
-	@echo "Testing & Quality:"
-	@echo "  test            - Run all tests"
-	@echo "  test_verbose    - Run tests with verbose output"
-	@echo ""
-	@echo "Demo & Examples:"
-	@echo "  demo            - Run both demo scripts"
-	@echo "  demo_clean      - Clean demo output files"
-	@echo ""
-	@echo "Schema Management:"
-	@echo "  convert_schema  - Convert output.csv from v1.0 to v2.0 format"
-	@echo ""
-	@echo "Technical Analysis Charts:"
-	@echo "  chart           - Generate DBS charts from CSV time series data"
-	@echo "  chart_yfinance  - Generate DBS charts from yfinance stock data"
-	@echo "  chart_help      - Show chart command-line help"
-	@echo ""
-	@echo "Utilities:"
-	@echo ""
-	@echo "  pipenv_freeze   - Generate requirements.txt"
-	@echo "  check_json      - Validate JSON schema (if config files exist)"
-	@echo "  help            - Show this help message"
+	@echo "Environment: pipenv_new install_deps pipenv_shell pipenv_venv"
+	@echo "Application: run run_verbose run_ci sample help_app"
+	@echo "Testing: test test_verbose"
+	@echo "Demo: demo demo_clean"
+	@echo "Schema: convert_schema"
+	@echo "Charts: chart chart_yfinance chart_help"
+	@echo "Aggregation: aggregate_sealed aggregate_single aggregate_sealed_fb aggregate_single_fb"
+	@echo "Workbench: workbench_discover workbench_analyze workbench_help"
+	@echo "Utilities: pipenv_freeze check_json help"
