--- a/app/data/workbench_configurations.json
+++ b/app/data/workbench_configurations.json
@@ -1,7 +1,7 @@
 {
   "schema_version": "1.0",
   "created_at": "2025-08-01T13:35:48.573684+00:00",
-  "last_modified": "2025-08-01T13:52:28.892161+00:00",
+  "last_modified": "2025-08-01T14:29:39.857872+00:00",
   "configurations": {
     "sv_cards_test": {
       "name": "sv_cards_test",
@@ -79,6 +79,45 @@
         "created_by_version": "workbench-v1.0",
         "dataset_fingerprint": "sha256:e0a6cf48642b0c46",
         "validation_dataset_size": 23
+      }
+    },
+    "default_config": {
+      "name": "default_config",
+      "display_name": "Default Config",
+      "description": null,
+      "filters": {
+        "sets": "SV*",
+        "types": "Card",
+        "period": "3M"
+      },
+      "validation_metadata": {
+        "filter_config": {
+          "sets": "SV*",
+          "types": "Card",
+          "period": "3M"
+        },
+        "coverage_percentage": 1.0,
+        "signatures_found": 13,
+        "signatures_total": 13,
+        "optimal_start_date": "2025-04-28",
+        "records_before_start": 0,
+        "records_aligned": 1248,
+        "time_series_points": 96,
+        "gap_fills_required": 0,
+        "missing_signatures": [],
+        "fallback_required": false,
+        "quality_score": 1.0
+      },
+      "usage_statistics": {
+        "created_at": "2025-08-01T14:29:36.342875+00:00",
+        "last_used": "2025-08-01T14:29:39.857494+00:00",
+        "use_count": 1,
+        "last_validation": "2025-08-01T14:29:36.342875+00:00"
+      },
+      "system_metadata": {
+        "created_by_version": "workbench-v1.0",
+        "dataset_fingerprint": "sha256:e0a6cf48642b0c46",
+        "validation_dataset_size": 13
       }
     }
   }
